--- a/Flask/app/static/css/stylesheet.css
+++ b/Flask/app/static/css/stylesheet.css
@@ -1,6 +1,6 @@
 
 html {
-	background-color: #d8daed;
+	/*background-color: #d8daed;/*
 	/*width: 100%;
 	height: 100%;*/
 }
@@ -8,12 +8,12 @@ html {
 body {
 	width: 1000px;
   	margin: auto;
-  	border: 10px #d8daed solid;
+  	border: 10px white solid;
   	border-top-color: #00008b;
   	font-family: "Century Gothic", Helvetica, Arial, sans-serif;
   	color: #00008b;
   	padding: 10px 0 30px 0;
-  	background-color: #d8daed;
+  	/*background-color: #d8daed;*/
   	text-align: center;
 }
 
@@ -22,12 +22,9 @@ h1 {
 	font-size: large;
 	color: #00008b;
 	text-align: center;
-	border-top: 60px #d8daed solid;
+	border-top: 60px white solid;
 }
 
-.state:hover {
-	color: black;
-}
 
 div {
 	text-align: right;
@@ -70,7 +67,7 @@ label {
 
 p#heading {
 	font-size: 40px;
-	border-top: 50px #d8daed solid;
+	border-top: 50px white solid;
 }
 
 /*p#total_jobs {
