--- a/Flask/app/templates/base.html
+++ b/Flask/app/templates/base.html
@@ -8,8 +8,8 @@
   <script type="text/javascript" src="/static/js/d3.v3.min.js"></script>
   <script type="text/javascript" src='/static/js/jquery-1.10.1.min.js'></script>
   <script type="text/javascript" src='/static/js/tooltipsy.source.js'></script>
-  <link rel="stylesheet" href="/static/css/stylesheet.css" />
-  <link rel="shortcut icon" href="/static/img/favicon.ico" />
+  <link rel="stylesheet" href='/static/css/stylesheet.css'/>
+  <link rel="shortcut icon" href="/app/static/img/favicon.ico" />
   </head>
   <body><strong>
     <div class="logo"><a href="/index"><em>GeoJobr</em></a></div>
