--- a/Flask/app/templates/base.html
+++ b/Flask/app/templates/base.html
@@ -1,4 +1,5 @@
 <html>
+
   <head>
     {% if title %}
     <title>{{title}} - GeoJobr</title>
@@ -11,10 +12,10 @@
   <link rel="stylesheet" href='/static/css/stylesheet.css'/>
   <link rel="shortcut icon" href="/app/static/img/favicon.ico" />
   </head>
-  <body><strong>
+  <body onunload=""><strong>
     <div class="logo"><a href="/index"><em>GeoJobr</em></a></div>
     <div class="header">
-    	<a href="/index">Search</a> 
+    	<a href="/index">Job Search</a> 
     	<a href="/about_me">About Me</a> 
     	<a href="/about_geojobr">About GeoJobr</a> 
     </div>
