--- a/Flask/app/static/css/stylesheet.css
+++ b/Flask/app/static/css/stylesheet.css
@@ -1,12 +1,15 @@
 
 html {
-	/*background-color: #d8daed;/*
+
+
+	/*background-color: #d8daed;*/
 	/*width: 100%;
 	height: 100%;*/
 }
 
 body {
-	width: 1000px;
+	background-image:url('/app/static/img/blue_world.jpg');
+	width: 98%;
   	margin: auto;
   	border: 10px white solid;
   	border-top-color: #00008b;
@@ -75,13 +78,28 @@ p#heading {
 }*/
 
 input.button {
-	font-family: "Century Gothic", Helvetica, Arial, sans-serif;
+	font-family: "Helvetica", Arial, sans-serif;
 	color: #00008b;
-	font-size: 150%;
+	font-size: 14px;
 	display: block;
 	text-align: center;
 	margin: auto;
-	cursor: hand;
+	cursor: pointer;
+	/*border-radius: 40px;*/
+	border:1px solid #d1dcdf; 
+	-webkit-border-radius: 40px; -moz-border-radius: 40px;border-radius: 40px; 
+	padding: 10px 10px 10px 10px; 
+	/*text-decoration:none; 
+	text-shadow: -1px -1px 0 rgba(0,0,0,0.3);
+	font-weight:bold; */
+ 	background-color: #f2f5f6; 
+ 	background-image: -webkit-gradient(linear, left top, left bottom, from(#f2f5f6), to(#c8d7dc));
+ 	background-image: -webkit-linear-gradient(top, #f2f5f6, #c8d7dc);
+ 	background-image: -moz-linear-gradient(top, #f2f5f6, #c8d7dc);
+ 	background-image: -ms-linear-gradient(top, #f2f5f6, #c8d7dc);
+ 	background-image: -o-linear-gradient(top, #f2f5f6, #c8d7dc);
+ 	background-image: linear-gradient(to bottom, #f2f5f6, #c8d7dc);
+ 	filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#f2f5f6, endColorstr=#c8d7dc);
 }
 
 input.button:hover {
