changing to light grey

--- a/Flask/app/templates/demand_map.html
+++ b/Flask/app/templates/demand_map.html
@@ -26,7 +26,7 @@ $('path').click(function() {
 			<text x="430" y="30" font-family="Century Gothic, Helvetica, Arial, sans-serif;" font-size="20" fill="#00008b">Total Jobs Found in US for '{{query}}': {{total}}</text>
 			<style type="text/css">
 				.state {
-					fill: #ababab;
+					fill: #e6e6e6;
 					stroke:#fff;
 					stroke-width:0.75;
 					stroke-opacity:1;
