hide about_me link

--- a/Flask/app/templates/base.html
+++ b/Flask/app/templates/base.html
@@ -16,7 +16,7 @@
     <div class="logo"><a href="/index"><em>GeoJobr</em></a></div>
     <div class="header">
     	<a href="/index">Job Search</a> 
-    	<a href="/about_me">About Me</a> 
+    	<!--<a href="/about_me">About Me</a> -->
     	<a href="/about_geojobr">About GeoJobr</a> 
     </div>
     <hr>
