--- a/Flask/app/templates/top_cities.html
+++ b/Flask/app/templates/top_cities.html
@@ -17,7 +17,7 @@ function goBack() {
 
 			<style type="text/css">
 				.state {
-					fill: #ababab;
+					fill: #fff;
 					stroke:#fff;
 					stroke-width:0.75;
 					stroke-opacity:1;
