comment out alert(why?)

--- a/Flask/app/templates/top_cities.html
+++ b/Flask/app/templates/top_cities.html
@@ -7,7 +7,7 @@
 <script>
 function goBack() {
   window.history.reload(history.go(-1))
-  alert("why?")
+  //alert("why?")
 };
 </script>
 		<svg width="959" height="593" style="background-color: white; border: 1px solid black;">
