new title slide

--- a/Flask/app/templates/about_geojobr.html
+++ b/Flask/app/templates/about_geojobr.html
@@ -2,7 +2,9 @@
 	{% block content %}
 	
 	<svg height="10px"></svg>
-	<iframe src="http://www.slideshare.net/slideshow/embed_code/23623946" width="850" height="650" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen> </iframe>
+	<iframe src="http://www.slideshare.net/slideshow/embed_code/23796569" width="427" height="356" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen> </iframe>
+	
+	<!--<iframe src="http://www.slideshare.net/slideshow/embed_code/23623946" width="850" height="650" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen> </iframe>
 	<!--<iframe src="http://www.slideshare.net/slideshow/embed_code/23581570" width="850" height="650" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen> </iframe> 
 	<!--<iframe src="http://www.slideshare.net/slideshow/embed_code/23519849" width="850" height="650" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen webkitallowfullscreen mozallowfullscreen> </iframe> 
 	<!--<iframe src="http://www.slideshare.net/slideshow/embed_code/23432213" width="850" height="650" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
